test/functions/errors/unexpected_argument_type_5.dmd
function add(a, b)
    return a - b

function add2(a, b)
    return add(a, b)

print(add2(3, 3.5))

--- Output
Type mismatch

The type of the 2nd argument of '-' doesn't match with what I expect.

2│     return a - b

The type received is:

float64

But possible types are:

int64

Called from:
    test/functions/errors/unexpected_argument_type_5.dmd: 5| add(a: int64, b: float64)
    test/functions/errors/unexpected_argument_type_5.dmd: 7| add2(a: int64, b: float64)

---